# kern

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml  kern.pc.in
docs/: builder.md
examples/: CMakeLists.txt  advanced.cpp  chaining.cpp  filtering.cpp  formatting.cpp  minimal.cpp
src/: builder.cpp  builder.h  dispatch.cpp  dispatch.h  info.cpp  info.h  kern.h  sink.cpp  sink.h
tests/: CMakeLists.txt  testbuilder.cpp  testdispatch.cpp  testmacros.cpp  testoperators.cpp  testsink.cpp  utils.cpp  utils.h
